--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.session.jdbc.initialize-schema=always
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/fcaixa
+spring.datasource.username=fcaixa
+spring.datasource.password=fcaixa
